Initial commit: NostrResearch platform

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
     "@hookform/resolvers": "^3.9.0",
     "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.46.4",
     "@nostrify/react": "npm:@jsr/nostrify__react@^0.2.8",
