--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -43,4 +43,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
-        cname: nostrresearch.com  # Replace with your custom domain if you have one
+        # cname: nostrresearch.com  # Replace with your custom domain if you have one
